# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
module(
    name = "score_toolchains_qnx_tests",
    version = "0.0.1",
    compatibility_level = 0,
)

bazel_dep(name = "score_toolchains_qnx", version = "0.0.1")
local_path_override(
    module_name = "score_toolchains_qnx",
    path = "../",
)

toolchain_qcc = use_extension("@score_toolchains_qnx//:extensions.bzl", "toolchain_qcc")
toolchain_qcc.sdp(
    sha256 = "f2e0cb21c6baddbcb65f6a70610ce498e7685de8ea2e0f1648f01b327f6bac63",
    strip_prefix = "installation",
    url = "https://www.qnx.com/download/download/79858/installation.tgz",
)
use_repo(toolchain_qcc, "toolchain_qcc_sdp")
use_repo(toolchain_qcc, "toolchain_qcc")

register_toolchains("@toolchain_qcc//:qcc_x86_64")
