# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
module(
    name = "score_toolchains_qnx_tests",
    version = "0.0.1",
    compatibility_level = 0,
)

bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "score_toolchains_qnx", version = "0.0.1")
local_path_override(
    module_name = "score_toolchains_qnx",
    path = "../",
)

toolchains_qnx = use_extension("@score_toolchains_qnx//:extensions.bzl", "toolchains_qnx")
toolchains_qnx.sdp(
    sha256 = "f2e0cb21c6baddbcb65f6a70610ce498e7685de8ea2e0f1648f01b327f6bac63",
    strip_prefix = "installation",
    url = "https://www.qnx.com/download/download/79858/installation.tgz",
)
use_repo(toolchains_qnx, "toolchains_qnx_sdp")
use_repo(toolchains_qnx, "toolchains_qnx_qcc")
use_repo(toolchains_qnx, "toolchains_qnx_ifs")

register_toolchains("@toolchains_qnx_qcc//:qcc_x86_64", "@toolchains_qnx_qcc//:qcc_aarch64")

register_toolchains("@toolchains_qnx_ifs//:ifs_x86_64", "@toolchains_qnx_ifs//:ifs_aarch64")

bazel_dep(name = "custom_qemu", version = "1.0.0")
archive_override(
    module_name = "custom_qemu",
    integrity = "sha256-3V2d+p7nP0tsbrVWOPYUSJogLNal43CIAHEto6Vjdfg=",
    strip_prefix = "third_party",  # matches top-level dir in the tar
    urls = [
        "https://github.com/qorix-group/custom-qemu/releases/download/1.0.0/custom_qemu.tar.gz",
    ],
)
